# idTech5Unpack

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  compile_commands.json  test.hexproj  x24.hexpat  x72.hexpat
src/: main.cpp  resource.cpp  resource.h  unpack.cpp  unpack.h
src/file/: file.cpp  file.h
src/lib/: precompiled.h  va.h
src/lib/containers/: flatmap.h  hashmap.h  linklist.h  list.h  map.h  ref.h  search.h  sort.h  span.h  staticlist.h  staticstr.h  str.cpp  str.h
src/lib/math/: hash.cpp  hash.h  math.h  rand.cpp  rand.h
src/lib/mem/: memory.cpp  memory.h
src/lib/sys/: defines.h  sys_macos.cpp  system.h
src/sys/: sys_macos.cpp
